--- a/231115_progbasics/css/style.css
+++ b/231115_progbasics/css/style.css
@@ -7,19 +7,20 @@ body {
     align-items: center;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
+    background-color:burlywood;
 }
 
 .eingabe {
     margin-top: 5rem;
+    margin-bottom: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: solid 1px black;
+    border: none;
+    background-color: white;
     border-radius: 10px;
     padding: 4rem;
-    
 }
 
 input {
@@ -28,8 +29,8 @@ input {
     width: 3rem;
 }
 
-#image {
-    width: 500px;
+img {
+    width: 200px;
 }
 
 button {
@@ -43,4 +44,28 @@ button:hover {
     cursor: pointer;
     background-color:forestgreen;
     color: white;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    width: 700px;
+    background-color: white;
+    border-bottom: dashed 1px burlywood;
+}
+    
+.container__text {
+    margin-left: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+p {
+    margin: 0;
+}
+
+h2 {
+    margin: 0;
+    margin-bottom: 1rem;
 }
